# django_account_api

./: LICENSE  MANIFEST.in  README.rst  setup.cfg  setup.py
accounts/: api.py  serializers.py  urls.py
docs/: README.rst
