[metadata]
name = django-account-api
version = 0.0.1
description = A Django app to setup auth api end points.
long_description = file: README.rst
author = Naveen Anil
author_email = naveen.anil@wind-pioneers.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[flake8]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,build
ignore = F405, E501

[isort]
line_length=120
default_section = THIRDPARTY
known_third_party = django*,drf*,rest*,knox
known_first_party = accounts
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
no_lines_before = THIRDPARTY, LOCALFOLDER
lines_after_imports=2
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
